[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Augment_Stage.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/menu_button_theme.tres" type="Theme" id=2]

[node name="Augment_Stage" type="Node2D"]
script = ExtResource( 1 )

[node name="Augment_Button1" type="Button" parent="."]
margin_left = 55.0
margin_top = 73.0
margin_right = 209.0
margin_bottom = 293.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Augment_Button2" type="Button" parent="."]
margin_left = 258.0
margin_top = 78.0
margin_right = 378.0
margin_bottom = 294.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Augment_Button3" type="Button" parent="."]
margin_left = 420.0
margin_top = 84.0
margin_right = 536.0
margin_bottom = 284.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_Button" type="Button" parent="."]
margin_left = 485.0
margin_top = 290.0
margin_right = 611.0
margin_bottom = 336.0
theme = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Augment_Button1" to="." method="_on_Augment_Button1_pressed"]
[connection signal="pressed" from="Augment_Button2" to="." method="_on_Augment_Button2_pressed"]
[connection signal="pressed" from="Augment_Button3" to="." method="_on_Augment_Button3_pressed"]
[connection signal="pressed" from="Continue_Button" to="." method="_on_Continue_Button_pressed"]
